fix bg video overflowing + contact changes

--- a/src/components/04 home-page/01 hero/hero.css
+++ b/src/components/04 home-page/01 hero/hero.css
@@ -23,6 +23,12 @@
 .home-video {
   z-index: -3;
   position: absolute;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  object-fit: cover;
+  object-position: center;
 }
 
 .home-left-container {
